perl (5.10.0-15) UNRELEASED; urgency=low

  * Fix Sys::Syslog slowness when logging with non-native mechanisms.
    (Closes: #498776)
  * Fix memory corruption with in-place sorting. (Closes: #498769)

 -- Niko Tyni <ntyni@debian.org>  Mon, 22 Sep 2008 12:38:34 +0300

perl (5.10.0-14) unstable; urgency=low

  * Make perl-base Pre-Depend on dpkg (>= 1.14.20), whose Essential scripts
    don't break when liblocale-gettext-perl and perl-base aren't binary
    compatible. (Closes: #488300)
  * Fix tainted usage of $ENV{TMPDIR} as an sprintf format in CGI.pm.
    (Closes: #494679)
  * Disable ext/threads/shared/t/stress.t on m68k for now. (Closes: #495826)
  * Improve Etch->Lenny upgrades by making perl-base conflict with those
    XS module packages in Etch that lacked the required perlapi-* dependency.
    (Closes: #494779)
  * Upgrade to Pod::Man 2.18 to get the 'pod2man --utf8' functionality
    in lenny. (Closes: #480997)
    + also fixes dash overescaping with non-ascii characters. (Closes: #480565)
    + headings starting with groff special characters are now handled
      correctly. (Closes: #448204)
  * Make /usr/bin/perldoc invoke pod2man with the "--utf8" option if it
    detects a new enough Pod::Man version. (Closes: #492037)

 -- Niko Tyni <ntyni@debian.org>  Mon, 08 Sep 2008 20:48:07 +0300

perl (5.10.0-13) unstable; urgency=low

  * Fix the libpod-simple-perl conflict version number. (Closes: #494272)

 -- Niko Tyni <ntyni@debian.org>  Fri, 08 Aug 2008 10:47:39 +0300

perl (5.10.0-12) unstable; urgency=low

  * Acknowledge NMU, thanks Bastian.
  * Bugfix release targeted for lenny.
  * Upgrade libfile-temp-perl conflict to (<= 0.18). (Closes: #480719)
  * Add upstream integration status information into debian/patches
    where applicable.
  * Add Vcs-Git and Vcs-Browser information in debian/control.
  * Fix Math::BigFloat::sqrt() breaking with too many digits. (Closes:
    #417528)
  * Remove numeric overloading of Getopt::Long callback functions.